ext/libhartonomous/include/hartonomous/text_decompose.h

typedef int (*hartonomous_text_emit_cb)(
    void* ctx,
    const hartonomous_text_record_t* rec
);
/* ── UCD blob load/unload ──────────────────────────────────── */

HARTONOMOUS_API int  hartonomous_ucd_load(const char* dir);
HARTONOMOUS_API void hartonomous_ucd_unload(void);
HARTONOMOUS_API int  hartonomous_ucd_loaded_state(void);
HARTONOMOUS_API int  hartonomous_ucd_catalog_ready(void);
HARTONOMOUS_API int  hartonomous_ucd_tables_ready(void);
/* ── Per-codepoint atom accessors ──────────────────────────── */

HARTONOMOUS_API int hartonomous_ucd_cp_centroid(int32_t cp, double out[4]);
HARTONOMOUS_API int hartonomous_ucd_cp_hash(int32_t cp, uint8_t out[32]);
HARTONOMOUS_API int32_t hartonomous_ucd_cp_from_hash(const uint8_t hash32[32]);
/* ── Per-codepoint property accessors ──────────────────────── */

/* UAX-#29 / UAX-#14 break properties. Returns 0 (Other) for any
 * out-of-range codepoint. Values are stable byte codes matching the
 * substrate's break_property reference table for the corresponding
 * category. */
HARTONOMOUS_API uint8_t hartonomous_ucd_cp_gcb(int32_t cp);
HARTONOMOUS_API uint8_t hartonomous_ucd_cp_wb(int32_t cp);
HARTONOMOUS_API uint8_t hartonomous_ucd_cp_sb(int32_t cp);
HARTONOMOUS_API uint8_t hartonomous_ucd_cp_lb(int32_t cp);
HARTONOMOUS_API uint8_t hartonomous_ucd_cp_incb(int32_t cp);
HARTONOMOUS_API int hartonomous_ucd_cp_extended_pictographic(int32_t cp);
/* Simple (single-codepoint) case mappings. Return the codepoint itself if
 * the table has no entry. */
HARTONOMOUS_API int32_t hartonomous_ucd_cp_simple_case_fold(int32_t cp);
HARTONOMOUS_API int32_t hartonomous_ucd_cp_simple_lowercase(int32_t cp);
HARTONOMOUS_API int32_t hartonomous_ucd_cp_simple_uppercase(int32_t cp);
HARTONOMOUS_API int32_t hartonomous_ucd_cp_simple_titlecase(int32_t cp);
/* Full (possibly multi-codepoint) case fold. Writes the expansion into
 * out[0..return-1] in canonical UCD order. Returns the codepoint count on
 * success (>= 1); returns -1 on null/oversize/out-of-range. Callers should
 * size the buffer for at least 4 entries to cover the worst case in
 * Unicode 17.0. */
HARTONOMOUS_API int hartonomous_ucd_cp_full_case_fold(
    int32_t cp,
    int32_t* out,
    int out_max);
/* UCA primary-weight collation rank (the same UCA index the S^3
 * Super-Fibonacci projection orders by). */
HARTONOMOUS_API int32_t hartonomous_ucd_cp_uca_index(int32_t cp);
/* ── Decomposition ─────────────────────────────────────────── */

HARTONOMOUS_API int hartonomous_text_decompose(
    const uint8_t* utf8,
    size_t utf8_len,
    int top_kind,
    double trust_mu,
    hartonomous_text_emit_cb emit,
    void* ctx,
    uint8_t out_root_hash[HARTONOMOUS_HASH_LEN],
    int* out_root_kind,
    double out_root_centroid[4]
);
/* ── Boundary extraction (lightweight, no record emission) ─────
 *
 * Run UAX-29 / UAX-14 segmentation on UTF-8 input. Return per-segment
 * START codepoint indices in `out_indices`. Final index `count` is the
 * codepoint count (one past the last segment start) — same convention as
 * the UCD test files.
 *
 * Caller-owned buffer; size required ≤ codepoint_count + 1. Pass
 * `out_capacity` to bound writes; the function returns the *required*
 * count even if the buffer is too small (callers can retry with a larger
 * buffer). Returns 0 on success, -1 on null arg, -2 on UCD not loaded.
 *
 * These functions are the substrate's SINGLE source of UAX-29 segmentation
 * truth. Per Law #6 / compute-facade rule, C# callers must P/Invoke into
 * these rather than reimplementing the state machine. */

HARTONOMOUS_API int hartonomous_text_grapheme_boundaries(
    const uint8_t* utf8,
    size_t utf8_len,
    int32_t* out_indices,
    int out_capacity,
    int* out_count
);
HARTONOMOUS_API int hartonomous_text_word_boundaries(
    const uint8_t* utf8,
    size_t utf8_len,
    int32_t* out_indices,
    int out_capacity,
    int* out_count
);
HARTONOMOUS_API int hartonomous_text_sentence_boundaries(
    const uint8_t* utf8,
    size_t utf8_len,
    int32_t* out_indices,
    int out_capacity,
    int* out_count
);
/* Codepoint count for a UTF-8 buffer (NFC-normalized internally). Useful
 * for sizing boundary buffers. Returns -1 on null arg, -2 on UCD not loaded. */
HARTONOMOUS_API int hartonomous_text_codepoint_count(
    const uint8_t* utf8,
    size_t utf8_len,
    int* out_count
);